# rust-postgresql

./: Cargo.toml
migrations/2021-05-31-185048_create_users/: up.sql
migrations/2021-06-07-070058_database/: down.sql  up.sql
src/: main.rs  models.rs  password_hasher.rs  schema.rs  update_ids.rs
src/commands/: add_user.rs  delete_user.rs  mod.rs  password_hasher.rs  show_users.rs  update_ids.rs
static/: index-page.css  login-page.css  signin-page.css  signup-page.css
templates/: index.hbs  login.hbs  login.html  login_error.hbs  signin.hbs  signin_error.hbs  signup.hbs  signup.html  signup_error.hbs
