[package]
name = "rust-diesel"
version = "0.1.0"
authors = ["Lalalend <acc4anim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
tera = "1.10.0"
sha256 = "1.0.2"
anyhow = "1.0.40"
dotenv = "0.15.0"
serde = "1.0.126"
actix-web = "3.3.2"
actix-files = "0.5.0"
diesel = { version = "1.4.6", features = ["postgres"] }
