[package]
name = "rust-diesel"
version = "0.1.0"
authors = ["Lalalend <acc4anim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
tera = "1.10.0"
regex = "1.5.4"
pbkdf2 = "0.8.0"
serde = "1.0.126"
chrono = "0.4.19"
anyhow = "1.0.40"
dotenv = "0.15.0"
actix-web = "3.3.2"
handlebars = "4.0.0"
serde_json = "1.0.64"
actix-files = "0.5.0"
actix-identity = "0.3.1"
rand_core = { version = "0.6.2", features = ["std"] }
diesel = { version = "1.4.6", features = ["postgres"] }
